Fix styles and User.js

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -23,6 +23,9 @@
 			font-size: 14px;
 			margin-top: 12px;
 		}
+		.open-panel .icon-menu {
+			font-size: 25px;
+		}
 	}
 	&::after {
 		content: none;
