--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -14,6 +14,7 @@
 @import '_partials/chip-list';
 @import '_partials/small-chip-list';
 @import '_partials/card';
+@import '_partials/user';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
@@ -42,7 +43,7 @@ body {
 
 				#page-content {
 					font-family: $nekuno-font;
-					margin: 150px auto 0 auto;
+					margin: 50px auto 0 auto;
 					width: 85%;
 
 					.list-block .item-content {
