--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -15,11 +15,11 @@ $nekuno-font: 'Maven Pro';
 
 @font-face {
 	font-family: 'Nekuno Icons';
-	src:url('../fonts/icomoon.eot?nn8br1');
-	src:url('../fonts/icomoon.eot?nn8br1#iefix') format('embedded-opentype'),
-	url('../fonts/icomoon.ttf?nn8br1') format('truetype'),
-	url('../fonts/icomoon.woff?nn8br1') format('woff'),
-	url('../fonts/icomoon.svg?nn8br1#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?aqqre2');
+	src:url('../fonts/icomoon.eot?aqqre2#iefix') format('embedded-opentype'),
+	url('../fonts/icomoon.ttf?aqqre2') format('truetype'),
+	url('../fonts/icomoon.woff?aqqre2') format('woff'),
+	url('../fonts/icomoon.svg?aqqre2#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -41,6 +41,9 @@ $nekuno-font: 'Maven Pro';
 
 .icon-circle:before {
 	content: "\e929";
+}
+.icon-line:before {
+	content: "\e92a";
 }
 .icon-pause:before {
 	content: "\e916";
