Fix login style

--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -1,3 +1,3 @@
-body #root .App .page #page-content.login-content {
+body #root .App .view .page #page-content.login-content {
   margin: 150px auto 0 auto;
 }
