--- a/src/scss/_partials/_small-chip-list.scss
+++ b/src/scss/_partials/_small-chip-list.scss
@@ -1,19 +1,7 @@
-.chip-list {
+.chip-list.small-chip {
 
 	.separator {
-		position: absolute;
-		margin-left: -5px;
-
-		&::before {
-			color: $green-alert;
-			content: "•";
-			font-size: 23px;
-			line-height: 22px;
-			vertical-align: text-top;
-		}
-	}
-	
-	.chip-wrapper {
-		display: inline-block;
+		font-size: 23px;
+		line-height: 22px;
 	}
 } 
