QS-902: Don't ask for more recommendations if url is null

--- a/src/scss/pages/recommendations.scss
+++ b/src/scss/pages/recommendations.scss
@@ -28,6 +28,7 @@ body #root .App .view .page  {
 
             .card {
               margin-top: 50px;
+              opacity: 0.5;
 
               img {
                 max-height: 120px;
