--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -13,6 +13,7 @@
 @import '_partials/small-chip';
 @import '_partials/chip-list';
 @import '_partials/small-chip-list';
+@import '_partials/progress-bar';
 @import '_partials/card';
 @import '_partials/user';
 
