--- a/src/scss/_partials/_button.scss
+++ b/src/scss/_partials/_button.scss
@@ -1,3 +1,9 @@
-.button {
+.button.button-round {
 	display: inline-block;
+	height: 30px;
+	line-height: 30px;
+	text-transform: uppercase;
+	font-size: 11px;
+	font-weight: bold;
+	padding: 0 20px 0 20px;
 }
