--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -42,7 +42,28 @@
     height:100%;
     float:left;
     .otherProfileAvatars{
-      min-height:50%;
+      height:50%;
+      .small-user-circles{
+        display:inline;
+        line-height: 100%;
+      }
+      .icon-circle{
+        color:$deep-purple;
+        margin-left:1.5px;
+        margin-right:1.5px;
+        font-size:5px;
+      }
+      .small-user-image{
+        margin-left:5px;
+        margin-right:5px;
+        display: inline;
+        img{
+          border-radius: 50%;
+          height:auto;
+          width:15%;
+        }
+
+      }
     }
     .otherProfileStats{
       width:100%;
