Add toolbar in profile page

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -4,6 +4,7 @@
 @import '_partials/fonts';
 @import '_partials/theme.color';
 @import '_partials/navbar';
+@import '_partials/toolbar';
 @import '_partials/panel';
 @import '_partials/form';
 @import '_partials/text-input';
