QS-903: Metadata formatting

--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -4,6 +4,8 @@
   margin-top: 30px;
   .profileData, .profileAboutMe{
     color: white;
+    display: table;
+    width: 100%;
 
     span{
       width:50%;
