--- a/src/scss/pages/questions.scss
+++ b/src/scss/pages/questions.scss
@@ -14,14 +14,29 @@ body #root .App .view .page.questions-page  {
 
         .question-title {
           font-weight: bold;
+          width: 85%;
         }
-        .question-answered, .question-not-answered {
-          .question-answered-picture, .question-not-answered-picture {
+        .edit-question-button {
+          background-color: $deep-purple;
+          border-radius: 50%;
+          float: right;
+          font-size: 10px;
+          height: 22px;
+          line-height: 24px;
+          text-align: center;
+          width: 22px;
+
+          a {
+            color: #fff;
+          }
+        }
+        .answer-answered, .answer-not-answered {
+          .answer-answered-picture, .answer-not-answered-picture {
             background-color: #fff;
             border-radius: 50%;
             display: inline-block;
             height: 22px;
-            margin: 10px 10px 10px 0px;
+            margin: 10px 10px 10px 0;
             text-align: center;
             width: 22px;
 
@@ -33,11 +48,19 @@ body #root .App .view .page.questions-page  {
             }
           }
 
-          .question-answered-answer, .question-not-answered-answer {
+          .answer-not-answered-picture {
+            opacity: 0.5;
+
+            img {
+              opacity: 0.5;
+            }
+          }
+
+          .answer-answered-text, .answer-not-answered-text {
             display: inline-block;
             margin-top: -8px;
             vertical-align: text-top;
-            width: 89%;
+            width: 85%;
           }
         }
 
