--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -1,5 +1,7 @@
 $deep-purple: #6342b1;
+$deep-purple-translucent: rgba(99, 66, 177, 0.5);
 $dark-purple: #151232;
+$dark-purple-translucent: rgba(21, 18, 50, 0.5);
 $dark-blue: #1b1843;
 $dark-gray: #1d2029;
 $light-gray: #888888;
