QS-907: Fix some profile labeling issues and add "see more" to About Me.

--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -27,6 +27,9 @@ body #root .App .view .page.user-page {
           margin-top: 1.5ex;
           width: 100%;
           margin-bottom: 3ex;
+          .seeMore {
+            color: $deep-purple;
+          }
         }
         .profileAboutMeName {
           font-weight: bold;
