QS-922: Add loading to recommendations page

--- a/src/scss/pages/recommendations.scss
+++ b/src/scss/pages/recommendations.scss
@@ -52,5 +52,10 @@ body #root .App .view .page  {
         }
       }
     }
+
+    .loading {
+      margin: 100px auto;
+      text-align: center;
+    }
   }
 }
