QS-905: Modal styles and answer modals functionality

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -6,6 +6,7 @@
 @import '_partials/navbar';
 @import '_partials/toolbar';
 @import '_partials/panel';
+@import '_partials/modal';
 @import '_partials/form';
 @import '_partials/text-input';
 @import '_partials/button';
