QS-905: Add question stats page

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -2,7 +2,13 @@ $deep-purple: #6342b1;
 $deep-purple-translucent: rgba(99, 66, 177, 0.5);
 $dark-purple: #151232;
 $dark-purple-translucent: rgba(21, 18, 50, 0.5);
+$purple: #2d205f;
 $dark-blue: #1b1843;
+$light-blue: #6abeee;
 $dark-gray: #1d2029;
 $light-gray: #888888;
-$green-alert: #69D6B8;
+$light-green: #32ca91;
+$green-alert: #69d6b8;
+$pink: #8262a1;
+$flesh-colored: #d96484;
+$yellow: #adb32f;
