--- a/src/scss/pages/other-questions.scss
+++ b/src/scss/pages/other-questions.scss
@@ -1,10 +1,97 @@
+@import '../_partials/colors';
+
 body #root .App .view .page.other-questions-page  {
   #page-content {
-    background: url('img/provisional-screens/other-questions_coming_soon.jpg') no-repeat;
-    background-size: 100% auto;
-    height: 100%;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
+    .answer-questions-link-container {
+      background-color: $deep-purple;
+      left: 0;
+      max-width: 480px;
+      min-width: 320px;
+      padding: 10px 5%;
+      position: absolute;
+      right: 0;
+      text-align: center;
+
+      a {
+        color: white;
+
+        .answer-questions-link-title {
+          font-size: 21px;
+          font-weight: bold;
+        }
+        .answer-questions-link-text {
+          font-size: 14px;
+        }
+        .answer-questions-link-stats {
+          font-size: 12px;
+          margin-top: 10px;
+        }
+      }
+    }
+    .question-list {
+      .question {
+        color: white;
+        margin-bottom: 15px;
+
+        .question-title {
+          font-weight: bold;
+          width: 85%;
+        }
+        .edit-question-button {
+          background-color: $deep-purple;
+          border-radius: 50%;
+          float: right;
+          font-size: 10px;
+          height: 22px;
+          line-height: 24px;
+          text-align: center;
+          width: 22px;
+
+          a {
+            color: #fff;
+          }
+        }
+        .answer-answered, .answer-not-answered {
+          .answer-answered-picture, .answer-not-answered-picture {
+            background-color: #fff;
+            border-radius: 50%;
+            display: inline-block;
+            height: 22px;
+            margin: 10px 10px 10px 0;
+            text-align: center;
+            width: 22px;
+
+            img {
+              border-radius: 50%;
+              height: 20px;
+              margin-top: 1px;
+              width: 20px;
+            }
+          }
+
+          .answer-not-answered-picture {
+            opacity: 0.5;
+
+            img {
+              opacity: 0.5;
+            }
+          }
+
+          .answer-answered-text, .answer-not-answered-text {
+            display: inline-block;
+            margin-top: -8px;
+            vertical-align: text-top;
+            width: 85%;
+          }
+        }
+
+        hr {
+          background-color: $deep-purple;
+          border: none;
+          height: 1px;
+          margin-top: 15px;
+        }
+      }
+    }
   }
 }
