QS-905: Refactor profile page to create profile avatars connection. Refactor CSS classes

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -18,6 +18,7 @@
 @import '_partials/progress-bar';
 @import '_partials/card';
 @import '_partials/user';
+@import '_partials/profile-avatars-connection';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
