--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -77,7 +77,7 @@ body #root .App .view .page.user-page {
 
     .other-profile-like-button {
       margin: 0 auto 25px auto;
-      width: 25%;
+      text-align: center;
     }
   }
 }
