--- a/src/scss/pages/other-questions.scss
+++ b/src/scss/pages/other-questions.scss
@@ -2,30 +2,15 @@
 
 body #root .App .view .page.other-questions-page  {
   #page-content {
-    .answer-questions-link-container {
-      background-color: $deep-purple;
-      left: 0;
-      max-width: 480px;
-      min-width: 320px;
-      padding: 10px 5%;
-      position: absolute;
-      right: 0;
+    .other-questions-header-container {
+      padding-top: 10px;
       text-align: center;
 
-      a {
-        color: white;
-
-        .answer-questions-link-title {
-          font-size: 21px;
-          font-weight: bold;
-        }
-        .answer-questions-link-text {
-          font-size: 14px;
-        }
-        .answer-questions-link-stats {
-          font-size: 12px;
-          margin-top: 10px;
-        }
+      .other-questions-stats-title {
+        color: #fff;
+        font-size: 23px;
+        padding-top: 10px;
+        padding-bottom: 20px;
       }
     }
     .question-list {
@@ -66,14 +51,6 @@ body #root .App .view .page.other-questions-page  {
               height: 20px;
               margin-top: 1px;
               width: 20px;
-            }
-          }
-
-          .answer-not-answered-picture {
-            opacity: 0.5;
-
-            img {
-              opacity: 0.5;
             }
           }
 
