--- a/src/scss/_partials/_profile-avatars-connection.scss
+++ b/src/scss/_partials/_profile-avatars-connection.scss
@@ -23,7 +23,7 @@
     img {
       border-radius: 50%;
       height: auto;
-      margin: 1px 0 0 1px;
+      margin: 1px;
       width: 28px;
     }
 
