--- a/src/scss/pages/question-stats.scss
+++ b/src/scss/pages/question-stats.scss
@@ -34,15 +34,36 @@ body #root .App .view .page.question-stats-page  {
           height: 150px;
           width: 150px;
 
+          @media only screen and (max-width: 370px) {
+            height: 140px;
+            width: 140px;
+          }
+
+          canvas {
+            height: 150px;
+            width: 150px;
+
+            @media only screen and (max-width: 370px) {
+              height: 140px;
+              width: 140px;
+            }
+          }
           .genre-icon {
             color: $deep-purple;
             margin-top: -100px;
             font-size: 23px;
 
+            @media only screen and (max-width: 370px) {
+              margin-top: -95px;
+            }
           }
           .icon-female {
             font-size: 28px;
             margin-top: -105px;
+
+            @media only screen and (max-width: 370px) {
+              margin-top: -100px;
+            }
           }
           .genre-text {
             font-size: 16px;
