Fix recommendations slider

--- a/src/scss/pages/recommendations.scss
+++ b/src/scss/pages/recommendations.scss
@@ -26,28 +26,20 @@ body #root .App .view .page  {
           z-index: 1;
 
           .recommendation {
-            -webkit-transform: scaleY(0.85); /* Saf3.1+, Chrome */
-            -moz-transform: scaleY(0.85); /* FF3.5+ */
-            -ms-transform: scaleY(0.85); /* IE9 */
-            -o-transform: scaleY(0.85); /* Opera 10.5+ */
-            transform: scaleY(0.85);
+
 
             .card {
               opacity: 0.5;
 
               .card-header {
-                -webkit-transform: scaleY(1.15); /* Saf3.1+, Chrome */
-                -moz-transform: scaleY(1.15); /* FF3.5+ */
-                -ms-transform: scaleY(1.15); /* IE9 */
-                -o-transform: scaleY(1.15); /* Opera 10.5+ */
-                transform: scaleY(1.15);
+
               }
             }
           }
         }
         .recommendation {
-          margin-left: 12.5%;
-          margin-top: 25px;
+          //margin-left: 12.5%;
+          margin: 25px auto 0;
           width: 75%;
         }
       }
