--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -2,6 +2,7 @@
 
 @import '_partials/colors';
 @import '_partials/fonts';
+@import '_partials/base';
 @import '_partials/theme.color';
 @import '_partials/navbar';
 @import '_partials/toolbar';
