--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -52,6 +52,7 @@ body {
 
 				.page {
 					background: $dark-purple;
+					height: auto;
 
 					#page-content {
 						font-family: $nekuno-font;
