--- a/src/scss/pages/other-interests.scss
+++ b/src/scss/pages/other-interests.scss
@@ -1,4 +1,6 @@
 body #root .App .view .page.other-interests-page  {
+  height: 100%;
+
   #page-content {
     background: url('img/provisional-screens/other-interests_coming_soon.jpg') no-repeat;
     background-size: 100% auto;
