QS-907: Block users in own profile

--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -79,5 +79,10 @@ body #root .App .view .page.user-page {
       margin: 0 auto 25px auto;
       text-align: center;
     }
+
+    .other-profile-block-button {
+      margin: -20px auto 25px auto;
+      text-align: center;
+    }
   }
 }
